--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=demo
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=test7
-server.port=8081
+server.port=8080
+
+springdoc.api-docs.path= /api-docs
+springdoc.swagger-ui.path= /swagger-ui.html
